<resources>
    <string name="app_name">Top News</string>

    <string-array name="countries">
        <item> \u0020 All Countries</item>
        <item> \u0020 Argentina</item>
        <item> \u0020 Brasil</item>
        <item> \u0020 Canadá</item>
        <item> \u0020 Germany</item>
        <item> \u0020 France</item>
        <item> \u0020 United Kingdom</item>
        <item> \u0020 Italy</item>
        <item> \u0020 México</item>
        <item> \u0020 Portugal</item>
        <item> \u0020 United States</item>
        <item> \u0020 Venezuela</item>
    </string-array>

    <string-array name="countryValues">
        <item>Country</item>
        <item>ar</item>
        <item>br</item>
        <item>ca</item>
        <item>de</item>
        <item>fr</item>
        <item>gb</item>
        <item>it</item>
        <item>mx</item>
        <item>pt</item>
        <item>us</item>
        <item>ve</item>
    </string-array>

    <string-array name="categories">
        <item> \u0020 All Categories</item>
        <item> \u0020 Business</item>
        <item> \u0020 Entertainment</item>
        <item> \u0020 General</item>
        <item> \u0020 Health</item>
        <item> \u0020 Science</item>
        <item> \u0020 Sports</item>
        <item> \u0020 Technology</item>
    </string-array>

    <string-array name="categoryValues">
        <item>All Category</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <string-array name="sources">
        <item> \u0020 All Sources</item>
        <item> \u0020 ABC News</item>
        <item> \u0020 BBC Sport</item>
        <item> \u0020 BBC News</item>
        <item> \u0020 Bloomberg</item>
        <item> \u0020 CNN"</item>
        <item> \u0020 CNN Spanish</item>
        <item> \u0020 ESPN</item>
        <item> \u0020 Fox News</item>
        <item> \u0020 Fox Sports</item>
        <item> \u0020 Globo</item>
        <item> \u0020 Google News</item>
    </string-array>
    <string-array name="sourceValues">
        <item>Sources</item>
        <item>abc-news</item>
        <item>bbc-sport</item>
        <item>bbc-news</item>
        <item>bloomberg</item>
        <item>cnn</item>
        <item>cnn-es</item>
        <item>espn</item>
        <item>fox-news</item>
        <item>fox-sports</item>
        <item>globo</item>
        <item>google-news</item>
    </string-array>
    <string-array name="languages">
        <item>\u0020 All Languages</item>
        <item>\u0020 English</item>
        <item>\u0020 Spanish</item>
        <item>\u0020 France</item>
        <item>\u0020 Italian</item>
        <item>\u0020 Portugués</item>
    </string-array>
    <string-array name="languageValues">
        <item>Languages</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <item>pt</item>
    </string-array>
    <string-array name="sortBy">
        <item>\u0020 Sort By</item>
        <item>\u0020 Relevancy</item>
        <item>\u0020 Popularity</item>
        <item>\u0020 Published At</item>
        <item></item>
    </string-array>

    <string-array name="sortByValues">
        <item>Sort By</item>
        <item>relevancy</item>
        <item>popularity</item>
        <item>publishedAt</item>
        <item></item>
    </string-array>

    <string-array name="defaultValuesQuery">
        <item>ve</item> <!-- Country  -->
        <item></item>   <!-- Category -->
        <item></item>   <!-- Source   -->
        <item>en</item> <!-- Language -->
    </string-array>

    <string name="aboutMessage">This is an aplication that Shows news using Rest Api with
                        Retrofit library from Newsapi.org \n\n\n And It was made on MVVM
                        arquitecture \n\n\nVersion 1.2 \n\n\n
                        CarPuL Company ©"</string>
    <string name="wrongChoice">Please choice another option</string>
    <string name="allArticlesdisplayed">Fin de lista</string>
    <string name="topNews">Top News</string>
    <string name="filters">Filters</string>
    <string name="aboutMenu">About</string>
    <string name="noResults">No results</string>
    <string name="promptEmail">Email</string>
    <string name="promptPassword">Password</string>
    <string name="actionSignIn">Sign in</string>
    <string name="actionRegister">Register</string>
    <string name="invalidUsername">Not a valid username</string>
    <string name="invalidPassword">Password must be >5 characters</string>
    <string name="loginFailed">"Login failed"</string>

    <!--FireBase-->

    <string name="networkError">com.google.firebase.FirebaseNetworkException: A network error
        (such as timeout, interrupted connection or unreachable host) has occurred.</string>

    <string name="formatError">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException:
        The email address is badly formatted.</string>

    <string name="emailInUse">com.google.firebase.auth.FirebaseAuthUserCollisionException:
        The email address is already in use by another account.</string>

    <string name="apiException">12501:\u0020</string>
    <string name="cancelByUser">com.google.firebase.auth.FirebaseAuthWebException: The web operation was canceled by the user.</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="facebook_app_id">879970785832899</string>
    <string name="fb_login_protocol_scheme">fb879970785832899</string>


    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="email">Email</string>
    <string name="keyword">Keyword</string>
    <string name="register_with_email">Register with Email</string>
    <string name="loading">Loading</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>